adição de arquivos de aula

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ chromedriver
 mysql_206
 .env
 aula207_ola_django/static_files
+.idea
+testes_aleatórios
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -32,7 +34,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-.idea
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
