--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ mysql_206
 aula207_ola_django/static_files
 .idea
 testes_aleatórios
+docker-compose.yml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
